# odfvalidator-lib

./: .gitignore  CMakeLists.txt  Makefile.am  ODFValidator.wxs.in  README.md  configure.ac  docker-compose.dev.yaml  docker-compose.packaging.yaml  docker-compose.yaml  license.rtf  odfvalidator  odfvalidator.spec.in  zh-TW.wxl
debian/: changelog  control  copyright  odfvalidator-lib-dev.install  odfvalidator-lib.install  rules
docs/: sample_code_usage.md
example/Linux/C#/TestSo/: Program.cs
example/Linux/C-Sharp/TestSo/: TestSo.csproj  TestSo.generated.sln
example/Linux/PHP/: testSo.php
example/Windows/C-Sharp/TestDll/: Program.cs  TestDll.csproj
example/Windows/PHP/: testDll.php
resources/: CMakeLists.txt  Makefile.am
src/: CMakeLists.txt  Makefile.am
src/include/: ODFValidator.hpp
src/lib/: ODFValidator.cpp  OdfValidator.cs
tools/: odfchecker.cpp  odfvalidator.cpp
