# -*- Mode: makefile-gmake; tab-width: 4; indent-tabs-mode: t -*-
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
#

jardir = $(datadir)/java/odfvalidator-lib
jar_DATA = odfvalidator-0.12.0-jar-with-dependencies.jar
dist_jar_DATA = $(jar_DATA)


# vim: set noet sw=4 ts=4:
